# PicoHTTPServer

./: .gitignore  LICENSE  README.md  build-all.sh
PicoHTTPServer/: CMakeLists.txt  FreeRTOSConfig.h  PicoHTTPServer.c  PicoHTTPServer.sln  PicoHTTPServer.vgdbproj  PicoSDKConfig.cmake  debug_printf.h  httpserver.c  httpserver.h  lwipopts.h  lwipopts_examples_common.h  main.c  server_settings.c  server_settings.h
PicoHTTPServer/dhcpserver/: dhcpserver.c  dhcpserver.h
PicoHTTPServer/dns/: dnsserver.c  dnsserver.h
PicoHTTPServer/tools/SimpleFSBuilder/: SimpleFSBuilder.cpp  SimpleFSBuilder.vgdbcmake
PicoHTTPServer/www/: index.html
lwip_patch/: lwip.patch
tools/SimpleFSBuilder/: CMakeLists.txt  SimpleFS.h  SimpleFSBuilder.cpp  SimpleFSBuilder.vgdbcmake
